# PostPilot

./: .gitignore  Googletask.py  Prompt.py  README.md  agent.py  login.py  main.py  pyproject.toml  schema.py
linkedin_session/: Last Browser  Local State  first_party_sets.db
linkedin_session/Default/: BrowsingTopicsState  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data
linkedin_session/Default/DawnGraphiteCache/: data_1  index
linkedin_session/Default/DawnWebGPUCache/: data_1  index
linkedin_session/Default/Extension Rules/: LOG
linkedin_session/Default/Extension Scripts/: LOG
linkedin_session/Default/Extension State/: LOG  LOG.old
linkedin_session/Default/GCM Store/: LOG  LOG.old
linkedin_session/Default/GPUCache/: data_0  data_1  data_2  index
linkedin_session/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
linkedin_session/Default/Session Storage/: LOG  LOG.old
linkedin_session/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  f_000024  f_000025  f_000026  (+2 more)
linkedin_session/GraphiteDawnCache/: data_1  index
linkedin_session/ShaderCache/: data_1  index
linkedin_session/segmentation_platform/: ukm_db
(+241 files in other folders)
