[project]
name = "linkedin-posttool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "linkedin-api>=2.3.1",
    "playwright>=1.55.0",
    "python-jobspy>=1.1.82",
    "requests>=2.32.5",
]
